# sightedturtlesim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/sightedturtlesim/: AbstractImageServer.hpp  QImageWidget.hpp  QSpawnRobotDialog.hpp  QTurtleGUI.hpp  SingleImageServer.hpp  Turtle.hpp  TurtleFrame.hpp  VisionTurtle.hpp
launch/: mt_royal.launch
misc/: Qt5GuiConfigExtras.cmake
msg/: DriveXYZ.msg  ImageWithPoseXYZ.msg  MapSettings.msg  PoseXYZ.msg  TurtleParams.msg  VelocityXYZ.msg  VisionTurtleSettings.msg
nodes/: GCSTools.py  ImageServer.py  gen_dataset.py  gmap_elevation_query_node.py  nrcan_altitude_query_node.py  nrcan_query_node.py  teleop_sighted_turtle_joy.py  test_load_single_image_map.py  test_query_geolocated_image.py  xy2gcs_node.py
src/: AbstractImageServer.cpp  ImageServerTester.cpp  QImageWidget.cpp  QTurtleGUI.cpp  QTurtleNode.cpp  SingleImageServer.cpp  TestQueryGeolocatedImage.cpp  Turtle.cpp  TurtleFrame.cpp  VisionTurtle.cpp  teleop_sighted_turtle_key.cpp
srv/: Kill.srv  LoadSingleImageMap.srv  QueryGeolocatedImage.srv  SetTurtleParams.srv  Spawn.srv  TeleportAbsoluteXYZ.srv
